--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -30,7 +30,7 @@
     <ProjectGuid>{AE7CFEE7-4058-4E3C-ADC2-AE7480EE2028}</ProjectGuid>
     <RootNamespace>nvse_plugin_example</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <ProjectName>DemoNVSE</ProjectName>
+    <ProjectName>ShowOffNVSE</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release ng|Win32'" Label="Configuration">
@@ -133,6 +133,7 @@
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <ForcedIncludeFiles>nvse/prefix.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <ModuleDefinitionFile>exports.def</ModuleDefinitionFile>
