le refactor raptor

--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -334,14 +334,13 @@
     <ClInclude Include="Events\JohnnyEventPredefinitions.h" />
     <ClInclude Include="Events\ShowOffEvents.h" />
     <ClInclude Include="Events\EventFilteringInterface.h" />
-    <ClInclude Include="functions\Demo_fn_Actors.h" />
-    <ClInclude Include="functions\Demo_fn_Array.h" />
-    <ClInclude Include="functions\Demo_fn_AuxVars.h" />
-    <ClInclude Include="functions\Demo_fn_Debug.h" />
-    <ClInclude Include="functions\Demo_fn_Gameplay.h" />
-    <ClInclude Include="functions\Demo_fn_Misc.h" />
-    <ClInclude Include="functions\Demo_fn_Settings.h" />
-    <ClInclude Include="functions\Trooper_fn_misc.h" />
+    <ClInclude Include="functions\ShowOff_fn_Actors.h" />
+    <ClInclude Include="functions\ShowOff_fn_Array.h" />
+    <ClInclude Include="functions\ShowOff_fn_AuxVars.h" />
+    <ClInclude Include="functions\ShowOff_fn_Debug.h" />
+    <ClInclude Include="functions\ShowOff_fn_Gameplay.h" />
+    <ClInclude Include="functions\ShowOff_fn_Misc.h" />
+    <ClInclude Include="functions\ShowOff_fn_Settings.h" />
     <ClInclude Include="internal\containers.h" />
     <ClInclude Include="internal\decoding.h" />
     <ClInclude Include="internal\havok.h" />
