--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -339,6 +339,7 @@
     <ClInclude Include="functions\ShowOff_fn_AuxVars.h" />
     <ClInclude Include="functions\ShowOff_fn_Debug.h" />
     <ClInclude Include="functions\ShowOff_fn_Gameplay.h" />
+    <ClInclude Include="functions\ShowOff_fn_Files.h" />
     <ClInclude Include="functions\ShowOff_fn_Misc.h" />
     <ClInclude Include="functions\ShowOff_fn_Settings.h" />
     <ClInclude Include="internal\containers.h" />
@@ -346,6 +347,7 @@
     <ClInclude Include="internal\havok.h" />
     <ClInclude Include="internal\jip_nvse.h" />
     <ClInclude Include="internal\Johnnnny Guitarrrrr.h" />
+    <ClInclude Include="internal\json.h" />
     <ClInclude Include="internal\memory_pool.h" />
     <ClInclude Include="internal\netimmerse.h" />
     <ClInclude Include="internal\NiPoint.h" />
