Add aliases, use enum for hook, change g_noEquipMap's type

--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -370,6 +370,7 @@
     <ClInclude Include="settings.h" />
     <ClInclude Include="ShowOffNVSE.h" />
     <ClInclude Include="SimpleINILibrary\SimpleIni.h" />
+    <ClInclude Include="SOTypes.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="exports.def" />
