--- a/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
+++ b/SHOWOFF-NVSE/nvse_plugin_example.vcxproj
@@ -313,7 +313,8 @@
     <ClCompile Include="..\nvse\Utilities.cpp" />
     <ClCompile Include="Events\LambdaVarContext.cpp" />
     <ClCompile Include="functions\ShowOff_fn_Files.cpp" />
-    <ClCompile Include="Hooks.cpp" />
+    <ClCompile Include="MenuHooks.cpp" />
+    <ClCompile Include="MiscHooks.cpp" />
     <ClCompile Include="internal\containers.cpp" />
     <ClCompile Include="internal\decoding.cpp" />
     <ClCompile Include="internal\jip_nvse.cpp" />
@@ -357,7 +358,8 @@
     <ClInclude Include="functions\ShowOff_fn_Files.h" />
     <ClInclude Include="functions\ShowOff_fn_Misc.h" />
     <ClInclude Include="functions\ShowOff_fn_Settings.h" />
-    <ClInclude Include="Hooks.h" />
+    <ClInclude Include="MenuHooks.h" />
+    <ClInclude Include="MiscHooks.h" />
     <ClInclude Include="internal\containers.h" />
     <ClInclude Include="internal\decoding.h" />
     <ClInclude Include="internal\havok.h" />
